--- a/Report.Rmd
+++ b/Report.Rmd
@@ -231,7 +231,7 @@ data_train<-data_train%>%
   mutate(log_C_moment_4=log(C_moment_4))
 ```
 
-Then we fitted linear regression model on the original first moment response variable, and linear regression model on the log-transformed response variables for second, third and fourth moments. All models have high rsquared.
+Then we fitted linear regression model on the original first moment response variable, and linear regression model on the log-transformed response variables for second, third and fourth moments. All models have high rsquared (See appendix 1.1 for final model regression output).
 
 ```{r, echo=F}
 final_model_M1 <- lm(R_moment_1 ~ St+ Re_category+Fr_transformed+Fr_transformed*Re_category+St*Re_category, data = data_train)
@@ -327,15 +327,41 @@ https://www.sciencedirect.com/topics/engineering/reynolds-number
 
 ## Appendix
 
-1. The regression output for models on 1st raw moment and 2nd, 3rd, 4th central moment.
+### 1.1
+
+The regression output for models on 1st raw moment and 2nd, 3rd, 4th central moment.
 ```{r}
 summary(final_model_M1)$coefficients %>% kable(digits = 3)
 summary(final_model_M2)$coefficients %>% kable(digits = 3)
 summary(final_model_M3)$coefficients %>% kable(digits = 3)
 summary(final_model_M4)$coefficients %>% kable(digits = 3)
 ```
+
+### 1.2
+
 2. The prediction output on the test data. 
 ```{r}
 data_predicted_output %>% kable(digits = 5)
 ```
 
+### 1.3
+### Model Diagnostics
+
+```{r, echo=F} 
+par(mfrow = c(2, 4))
+plot(final_model_M1)
+plot(final_model_M2)
+plot(final_model_M3)
+plot(final_model_M4)
+```
+
+We conducted model diagnostic on the final model from mainly four perspectives
+
+- Residuals vs Fitted: While 
+Used to check the linear relationship assumptions. A horizontal line, without distinct patterns is an indication for a linear relationship, what is good.
+
+- Normal Q-Q. Used to examine whether the residuals are normally distributed. It’s good if residuals points follow the straight dashed line.
+
+- Scale-Location (or Spread-Location). Used to check the homogeneity of variance of the residuals (homoscedasticity). Horizontal line with equally spread points is a good indication of homoscedasticity. This is not the case in our example, where we have a heteroscedasticity problem.
+
+- Residuals vs Leverage. Used to identify influential cases, that is extreme values that might influence the regression results when included or excluded from the analysis. This plot will be described further in the next sections.
